Fix HTML encoding issues in Portfolio.html

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -28,10 +28,10 @@
     <a href="https://github.com/pritamdahal75" class="social-btn github" target="_blank">
       <i class="fab fa-github"> </i>GitHub
     </a>
-    <a href="https://www.instagram.com/pritamdahal75/" target="_blank" class="social-btn instagram">
+    <a href="https://www.instagram.com/pritamdahal7/" target="_blank" class="social-btn instagram">
       <i class="fab fa-instagram"></i>Instagram
     </a>
-    <a href="https://www.linkedin.com/in/pritamdahal75" target="_blank" class="social-btn linkedin"> 
+    <a href="https://www.linkedin.com/in/pritam-dahal-069822322/" target="_blank" class="social-btn linkedin"> 
       <i class="fab fa-linkedin"></i>LinkedIn
     </a>
   </div>
@@ -161,3 +161,4 @@ form.addEventListener("submit", function(e) {
 
 </body>
 </html>
+
