Change contact form action to Formspree
Updated contact form action to use Formspree for submissions.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <section id="contact">
   <h2>Contact Me</h2>
 
-  <form id="contactForm">
+  <form id="contactForm" action="https://formspree.io/f/mdaanrka">
     <p id="formMessage" style="display:none;font-weight:600"></p>
 
     <input type="text" name="name" placeholder="Name" required>
@@ -125,7 +125,7 @@
   © 2026 Pritam Dahal
 </footer>
 
-<script>
+<!-- <script>
 const form = document.getElementById("contactForm");
 const msgBox = document.getElementById("formMessage");
 
@@ -157,8 +157,9 @@ form.addEventListener("submit", function(e) {
     msgBox.innerText = "❌ Server error!";
   });
 });
-</script>
+</script> -->
 
 </body>
 </html>
+
 
