--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <title>Pritam Dahal | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="protfolio.css">
-
-  <!-- Font Awesome -->
+  <!-- Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -17,29 +16,30 @@
   <a href="#skills">Skills</a>
   <a href="#projects">Projects</a>
   <a href="#contact">Contact</a>
+  <button onclick="toggleMode()">🌙</button>
 </nav>
 
-<header id="home">
-  <img src="profiile.jpg" alt="Profile" class="profile-img">
+<header id="home" class="reveal">
+  <img src="profiilr.jpg" alt="Profile" class="profile-img">
   <h1>Pritam Dahal</h1>
   <p>Aspiring Frontend Developer</p>
 
   <div class="social">
     <a href="https://github.com/pritamdahal75" class="social-btn github" target="_blank">
-      <i class="fab fa-github"> </i>GitHub
+      <i class="fab fa-github"></i> GitHub
     </a>
-    <a href="https://www.instagram.com/pritamdahal7/" target="_blank" class="social-btn instagram">
-      <i class="fab fa-instagram"></i>Instagram
+    <a href="https://www.instagram.com/pritamdahal75/" class="social-btn instagram" target="_blank">
+      <i class="fab fa-instagram"></i> Instagram
     </a>
-    <a href="https://www.linkedin.com/in/pritam-dahal-069822322/" target="_blank" class="social-btn linkedin"> 
-      <i class="fab fa-linkedin"></i>LinkedIn
+    <a href="https://www.linkedin.com/in/pritamdahal75" class="social-btn linkedin" target="_blank">
+      <i class="fab fa-linkedin"></i> LinkedIn
     </a>
   </div>
 
-  <a href="cv.pdf" download class="btn">📄 Download CV</a>
+  <a class="btn" href="cv.pdf" download>📄 Download CV</a>
 </header>
 
-<section id="about">
+<section id="about" class="reveal">
   <h2>About Me</h2>
   <p>
     I’m <b>Pritam Dahal</b>, a BCA student learning frontend development.
@@ -47,7 +47,7 @@
   </p>
 </section>
 
-<section id="skills">
+<section id="skills" class="reveal">
   <h2>Skills</h2>
   <div class="skill">
     <span>HTML</span>
@@ -70,7 +70,7 @@
   </div>
 </section>
 
-<section id="projects">
+<section id="projects" class="reveal">
   <h2>Projects</h2>
   <div class="flex">
     <div class="card">
@@ -110,13 +110,11 @@
 <section id="contact">
   <h2>Contact Me</h2>
 
-  <form id="contactForm" action="https://formspree.io/f/mdaanrka">
-    <p id="formMessage" style="display:none;font-weight:600"></p>
-
+  <!-- Formspree form -->
+  <form id="contactForm" action="https://formspree.io/f/mdaanrka" method="POST">
     <input type="text" name="name" placeholder="Name" required>
     <input type="email" name="email" placeholder="Email" required>
     <textarea name="message" placeholder="Message" required></textarea>
-
     <button type="submit">Send</button>
   </form>
 </section>
@@ -125,41 +123,18 @@
   © 2026 Pritam Dahal
 </footer>
 
-<!-- <script>
-const form = document.getElementById("contactForm");
-const msgBox = document.getElementById("formMessage");
+<button id="topBtn" onclick="scrollToTop()">⬆</button>
 
-form.addEventListener("submit", function(e) {
-  e.preventDefault();
+<script>
+function scrollToTop() {
+  window.scrollTo({ top: 0, behavior: 'smooth' });
+}
 
-  const formData = new FormData(form);
-
-  fetch("contact.php", {
-    method: "POST",
-    body: formData
-  })
-  .then(res => res.text())
-  .then(data => {
-    msgBox.style.display = "block";
-
-    if (data.trim() === "success") {
-      msgBox.style.color = "green";
-      msgBox.innerText = "✅ Message sent successfully!";
-      form.reset();
-    } else {
-      msgBox.style.color = "red";
-      msgBox.innerText = "❌ Something went wrong!";
-    }
-  })
-  .catch(() => {
-    msgBox.style.display = "block";
-    msgBox.style.color = "red";
-    msgBox.innerText = "❌ Server error!";
-  });
-});
-</script> -->
+// Optional: dark mode toggle
+function toggleMode() {
+  document.body.classList.toggle("dark-mode");
+}
+</script>
 
 </body>
 </html>
-
-
