Fix HTML character encoding issues

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </nav>
 
 <header id="home" class="reveal">
-  <img src="profiilr.jpg" alt="Profile" class="profile-img">
+  <img src="profiile.jpg" alt="Profile" class="profile-img">
   <h1>Pritam Dahal</h1>
   <p>Aspiring Frontend Developer</p>
 
@@ -138,3 +138,4 @@ function toggleMode() {
 
 </body>
 </html>
+
