Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </nav>
 
 <header id="home" class="reveal">
-  <img src="profiilr.jpg" alt="Profile" class="profile-img">
+  <img src="profiile.jpg" alt="Profile" class="profile-img">
   <h1>Pritam Dahal</h1>
   <p>Aspiring Frontend Developer</p>
 
@@ -36,10 +36,10 @@
     <a href="https://github.com/pritamdahal75" class="social-btn github" target="_blank">
       <i class="fab fa-github"></i> GitHub
     </a>
-    <a href="https://www.instagram.com/pritamdahal75/" class="social-btn instagram" target="_blank">
+    <a href="https://www.instagram.com/pritamdahal7" class="social-btn instagram" target="_blank">
       <i class="fab fa-instagram"></i> Instagram
     </a>
-    <a href="https://www.linkedin.com/in/pritamdahal75" class="social-btn linkedin" target="_blank">
+    <a href="https://www.linkedin.com/in/pritam-dahal-069822322/" class="social-btn linkedin" target="_blank">
       <i class="fab fa-linkedin"></i> LinkedIn
     </a>
   </div>
@@ -145,3 +145,4 @@ function toggleMode() {
 
 </body>
 </html>
+
